navigation menu added

--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Website</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!---fav-icon--->
-    <link rel="shortcut icon" href="./images/favi.png">
+    <link rel="shortcut icon" href="../images/favi.png">
+    <!--using FontAwesome-->
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!--navigation-->
+    <nav>
+        <!--logo-->
+        <a href="#" class="logo">
+            <img src="../images/logo.png"/>
+        </a>
+        <!--menu-->
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Moives</a></li>
+            <li><a href="#">TvShows</a></li>
+            <li><a href="#">Hollywood</a></li>
+            <li><a href="#">Horror</a></li>
+        </ul>
+        <!--search-->
+        <div class="search">
+            <input type="text" placeholder="Find Your Favorite Movies"/>
+            <!--search icon-->
+            <i class="fas fa-search"></i>
+        </div>
+    </nav>
 </body>
 </html>
